--- a/app/views/competitions/disciplines/_index_right.html.haml
+++ b/app/views/competitions/disciplines/_index_right.html.haml
@@ -1,4 +1,4 @@
-= card_body('Vorlage hinzufügen') do
+= card_body('Vorlage hinzufügen', class: 'mb-4') do
   .d-grid.gap-2
     - Discipline::DISCIPLINES.each do |key|
       - next if key == 'other'
@@ -6,3 +6,6 @@
       = button_to({ action: :create }, params: { discipline: { key:, name: Discipline::DEFAULT_NAMES[key], short_name: key.upcase, single_discipline: Discipline::DEFAULT_SINGLE_DISCIPLINES[key], like_fire_relay: key == 'fs' } }, class: 'btn btn-light btn-sm') do
         = discipline_image(key)
         = Discipline::DEFAULT_NAMES[key]
+
+= card_body('Zweikampf') do
+  %p Eine Zweikampfwertung legt man über eine kombinierte Ergebnisliste an.
