--- a/app/views/competitions/score/results/_result_table_single.html.haml
+++ b/app/views/competitions/score/results/_result_table_single.html.haml
@@ -1,37 +1,35 @@
 %table.table.table-bordered
   %tr
     - if places
-      %th
+      %th.hide-xs
     - if @competition.show_bib_numbers?
-      %th.hidden-xs Nr.
+      %th.hide-xs Nr.
     %th Name
-    %th Mannschaft
-    - if @result.calculation_method_zweikampf?
-      %th Summe
-      - @result.results.each do |result|
-        %th= discipline_image(result.assessment.discipline.key)
-    - else
+    %th.hide-xs Mannschaft
+    - if @result.multi_result_method_disabled?
       %th Bestzeit
       - @result.lists.each do |list|
-        %th= list.shortcut
+        %th.hide-xs= list.shortcut
+    - else
+      %th Ergebnis
+      - @result.results.each do |result|
+        %th.hide-xs{ title: result.name }= discipline_image(result.discipline_key)
 
   - rows.each do |row|
     %tr
       - if places
-        %td.less-important #{@result.place_for_row(row)}.
+        %td.hide-xs #{@result.place_for_row(row)}.
       - if @competition.show_bib_numbers?
-        %td.hidden-xs= row.entity&.bib_number
+        %td.hide-xs= row.entity&.bib_number
       %td
         = row.entity.full_name
         = personal_best_badge(row.entity&.fire_sport_statistics_person, row.best_result_entry)
-      %td.less-important= row.entity&.team&.shortcut_name
-      - if row.is_a?(Score::DoubleEventResultRow)
-        %td
-          %strong= row.sum_result_entry.human_time
-        - @result.results.each do |result|
-          %td= row.result_entry_from(result)&.human_time
-      - else
-        %td
-          %strong= row.best_result_entry.human_time
+      %td.hide-xs= row.entity&.team&.shortcut_name
+      %td
+        %strong= row.best_result_entry.human_time
+      - if @result.multi_result_method_disabled?
         - @result.lists.each do |list|
-          %td.less-important= row.result_entry_from(list)&.human_time
+          %td.hide-xs= row.result_entry_from(list)&.human_time
+      - else
+        - @result.results.each do |result|
+          %td.hide-xs{ title: result.name }= row.result_entry_from(result)&.human_time
