--- a/spec/fixtures/views/competitions_score_results_change_assessment_blocks_bad_changes-edit-with-error/view.html
+++ b/spec/fixtures/views/competitions_score_results_change_assessment_blocks_bad_changes-edit-with-error/view.html
@@ -142,7 +142,7 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group select required score_result_assessment form-group-invalid"><label class="control-label select required" for="score_result_assessment_id">Wertung <abbr title="required">*</abbr></label><select class="form-select is-invalid select required" aria-invalid="true" name="score_result[assessment_id]" id="score_result_assessment_id"><option value="" label=" "></option>
+<div class="form-group select optional score_result_assessment form-group-invalid"><label class="control-label select optional" for="score_result_assessment_id">Wertung</label><select class="form-select is-invalid select optional" aria-invalid="true" name="score_result[assessment_id]" id="score_result_assessment_id"><option value="" label=" "></option>
 <option value="UUID">Hakenleitersteigen - Frauen</option>
 <option value="UUID">Hakenleitersteigen - Männer</option>
 <option selected="selected" value="UUID">Löschangriff Nass - Frauen</option></select><div class="invalid-feedback">Wertung muss die gleiche Disziplin haben</div><small class="form-text text-muted">Es kann mehrere Ergebnisse für eine Wertung geben: Zum Beispiel Finalläufe.</small></div>
