--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show-with-results/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show-with-results/view.html
@@ -221,47 +221,47 @@ Ja
 </div>
 <table class='table table-bordered'>
 <tr>
-<th></th>
+<th class='hide-xs'></th>
 <th>Name</th>
-<th>Mannschaft</th>
+<th class='hide-xs'>Mannschaft</th>
 <th>Bestzeit</th>
-<th>Lauf 1</th>
+<th class='hide-xs'>Lauf 1</th>
 </tr>
 <tr>
-<td class='less-important'>1.</td>
+<td class='hide-xs'>1.</td>
 <td>
 Alfred1 Meier1
 
 </td>
-<td class='less-important'>Frauen-T</td>
+<td class='hide-xs'>Frauen-T</td>
 <td>
 <strong>12,00</strong>
 </td>
-<td class='less-important'>12,00</td>
+<td class='hide-xs'>12,00</td>
 </tr>
 <tr>
-<td class='less-important'>2.</td>
+<td class='hide-xs'>2.</td>
 <td>
 Alfred2 Meier2
 
 </td>
-<td class='less-important'>Frauen-T</td>
+<td class='hide-xs'>Frauen-T</td>
 <td>
 <strong>13,00</strong>
 </td>
-<td class='less-important'>13,00</td>
+<td class='hide-xs'>13,00</td>
 </tr>
 <tr>
-<td class='less-important'>3.</td>
+<td class='hide-xs'>3.</td>
 <td>
 Alfred3 Meier3
 
 </td>
-<td class='less-important'>Frauen-T</td>
+<td class='hide-xs'>Frauen-T</td>
 <td>
 <strong>14,00</strong>
 </td>
-<td class='less-important'>14,00</td>
+<td class='hide-xs'>14,00</td>
 </tr>
 </table>
 
