--- a/app/views/competitions/score/results/_result_table_group.html.haml
+++ b/app/views/competitions/score/results/_result_table_group.html.haml
@@ -1,31 +1,41 @@
 %table.table.table-bordered
   %tr
     - if places
-      %th
+      %th.hide-xs
     %th Mannschaft
-    %th Bestzeit
-    - @result.lists.each do |list|
-      - if list.separate_target_times?
-        %th{ colspan: 2 }= list.shortcut
-      - else
-        %th= list.shortcut
+    - if @result.multi_result_method_disabled?
+      %th Bestzeit
+      - @result.lists.each do |list|
+        - if list.separate_target_times?
+          %th.hide-xs{ colspan: 2 }= list.shortcut
+        - else
+          %th.hide-xs= list.shortcut
+    - else
+      %th Ergebnis
+      - @result.results.each do |result|
+        %th.hide-xs{ title: result.name }= discipline_image(result.discipline_key)
+
 
   - rows.each do |row|
     %tr
       - if places
-        %td.less-important #{@result.place_for_row(row)}.
+        %td.hide-xs #{@result.place_for_row(row)}.
       %td
         = row.entity.full_name
         = team_badge(row.entity&.fire_sport_statistics_team, row.entity.band.gender)
       %td
         %strong= row.best_result_entry.human_time
-      - @result.lists.each do |list|
-        - if list.separate_target_times?
-          %td.separate-times
-            = row.result_entry_from(list)&.human_time_left_target
-            %br
-            = row.result_entry_from(list)&.human_time_right_target
-          %td
-            = row.result_entry_from(list)&.human_time
-        - else
-          %td.less-important= row.result_entry_from(list)&.human_time
+      - if @result.multi_result_method_disabled?
+        - @result.lists.each do |list|
+          - if list.separate_target_times?
+            %td.separate-times.hide-xs
+              = row.result_entry_from(list)&.human_time_left_target
+              %br
+              = row.result_entry_from(list)&.human_time_right_target
+            %td
+              = row.result_entry_from(list)&.human_time
+          - else
+            %td.hide-xs= row.result_entry_from(list)&.human_time
+      - else
+        - @result.results.each do |result|
+          %td.hide-xs{ title: result.name }= row.result_entry_from(result)&.human_time
