--- a/spec/fixtures/views/Discipline_disciplines_managements_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/Discipline_disciplines_managements_uses_CRUD-index-empty/view.html
@@ -149,7 +149,7 @@ Erweitert
 </div>
 
 </div>
-<div class='col-lg-4'><div class='card'>
+<div class='col-lg-4'><div class='card mb-4'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Vorlage hinzufügen</h4>
@@ -163,13 +163,22 @@ Löschangriff Nass
 Hakenleitersteigen
 </button><input type="hidden" name="discipline[key]" value="hl" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Hakenleitersteigen" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="HL" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/hb.svg" width="20" height="20" />
 100m-Hindernisbahn
-</button><input type="hidden" name="discipline[key]" value="hb" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="100m-Hindernisbahn" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="HB" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/zk.svg" width="20" height="20" />
-Zweikampf
-</button><input type="hidden" name="discipline[key]" value="zk" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Zweikampf" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="ZK" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/gs.svg" width="20" height="20" />
+</button><input type="hidden" name="discipline[key]" value="hb" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="100m-Hindernisbahn" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="HB" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="true" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/gs.svg" width="20" height="20" />
 Gruppenstafette
 </button><input type="hidden" name="discipline[key]" value="gs" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="false" autocomplete="off" /><input type="hidden" name="discipline[name]" value="Gruppenstafette" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="GS" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="false" autocomplete="off" /></form><form class="button_to" method="post" action="/2024/mv-cup/disciplines"><button class="btn btn-light btn-sm" type="submit"><img src="/assets/disciplines/fs.svg" width="20" height="20" />
 4x100m-Hindernisstaffel
 </button><input type="hidden" name="discipline[key]" value="fs" autocomplete="off" /><input type="hidden" name="discipline[like_fire_relay]" value="true" autocomplete="off" /><input type="hidden" name="discipline[name]" value="4x100m-Hindernisstaffel" autocomplete="off" /><input type="hidden" name="discipline[short_name]" value="FS" autocomplete="off" /><input type="hidden" name="discipline[single_discipline]" value="false" autocomplete="off" /></form></div>
+
+</div>
+</div>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Zweikampf</h4>
+</div>
+</div>
+<div class='card-body'>
+<p>Eine Zweikampfwertung legt man über eine kombinierte Ergebnisliste an.</p>
 
 </div>
 </div>
