--- a/spec/fixtures/views/Competitions_SimpleAccessesController_accesses_managements_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/Competitions_SimpleAccessesController_accesses_managements_uses_CRUD-index-empty/view.html
@@ -132,12 +132,15 @@ Erweitert
 <th>Name</th>
 <th>E-Mail-Adresse</th>
 <th>Infomail</th>
+<th></th>
 </tr>
 <tr>
 <td>Alfred Meier</td>
 <td>alfred@meier.de</td>
 <td style='width: 60px; text-align: center' title='E-Mail-Information über neue Registrierungen'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/accesses/UUID/edit?registration_mail_info=false"><i class="far fa-square-check"></i></a>
+</td>
+<td style='width: 60px; text-align: center'>
 </td>
 </tr>
 </table>
