--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -232,12 +232,12 @@
   border-bottom: 2px solid black
 
 
-tr.highlight-updated-run td, tr.highlight-updated-run th
+tr.highlight-updated-row td, tr.highlight-updated-row th
   background-color: #b2ffb2
 
-tr.highlight-updated-run-fade-out td, tr.highlight-updated-run-fade-out th
+tr.highlight-updated-row-fade-out td, tr.highlight-updated-row-fade-out th
   background-color: white
-  transition: background-color 10s ease-out
+  transition: background-color 30s ease-out
 
 .suggestions-entries
   overflow: auto
