--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show-with-results/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show-with-results/view.html
@@ -132,7 +132,7 @@ Erweitert
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
-<div class='row g-4'>
+<div class='row g-4 score-result-channel' data-score-result-id='UUID'>
 <div class='col-lg-8 mb-4'>
 <div class='card'>
 <div class='card-header p-0'>
@@ -212,7 +212,7 @@ Ja
 </div>
 </div>
 </div>
-<div class='col-lg-12'>
+<div class='col-lg-12 score-result-rows-table' data-content='rows'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
@@ -268,7 +268,7 @@ Alfred3 Meier3
 
 </div>
 </div>
-<div class='col-lg-12'>
+<div class='col-lg-12 score-result-rows-table' data-content='group-rows'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
@@ -297,6 +297,7 @@ Alfred3 Meier3
 
 </div>
 </div>
+
 </div>
 </div>
 </body>
