--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
@@ -133,7 +133,7 @@ Erweitert
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
-<div class='row g-4'>
+<div class='row g-4 score-result-channel' data-score-result-id='UUID'>
 <div class='col-lg-8 mb-4'>
 <div class='card'>
 <div class='card-header p-0'>
@@ -212,6 +212,7 @@ Ja
 <div class='col-lg-8'>
 <div class='alert alert-info'>Keine Einträge gefunden</div>
 </div>
+
 </div>
 </div>
 </body>
