--- a/spec/fixtures/views/Team_people_assessment_requests_shows_people_table-with-people-table/view.html
+++ b/spec/fixtures/views/Team_people_assessment_requests_shows_people_table-with-people-table/view.html
@@ -241,7 +241,7 @@ Mannschaftswertung
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
-<a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/deletion/new">Löschen</a>
 </div>
 
 </div>
