--- a/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-index-two-entries/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-index-two-entries/view.html
@@ -138,7 +138,7 @@ Erweitert
 <tr>
 <td>Alfred Meier</td>
 <td>alfred@meier.de</td>
-<td style='width: 60px; text-align: center' title='E-Mail-Information über neue Registrierungen'>
+<td style='width: 60px; text-align: center' title='E-Mail-Information über neue Registrierungen oder Anfragen'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/accesses/UUID/edit?registration_mail_info=false"><i class="far fa-square-check"></i></a>
 </td>
 <td style='width: 60px; text-align: center'>
